aireye-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aireye-app
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: aireye-app
  template:
    metadata:
      labels:
        app: aireye-app
    spec:
      containers:
        - name: backend
          image: ghcr.io/lowjungxuandev/grim/backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
