aireye-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aireye-app
spec:
  selector:
    app: aireye-app
  ports:
    - name: http
      port: 80
      targetPort: http
